# Quantum-Anneal-CTL

./: .dockerignore  .env.example  .env.production.template  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_V4.md  AUTONOMOUS_SDLC_ENHANCEMENT_SUMMARY.md  AUTONOMOUS_SDLC_GENERATION_4_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_PROGRESSIVE_QUALITY_GATES_COMPLETION.md  AUTONOMOUS_SDLC_RESEARCH_COMPLETION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.pipeline-guard  Dockerfile.production  PIPELINE_GUARD_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE_V4.md  PROGRESSIVE_QUALITY_GATES_DEPLOYMENT.md  PROJECT_CHARTER.md  README.md  bootstrap_quantum_system.py  demo_autonomous_breakthrough.py  demo_config.json  demo_generation_3_scaling.py  demo_health_metrics.json  deploy.py  docker-compose.pipeline-guard.yml  docker-compose.production.yml  docker-compose.yml  generation_2_validation_results.json  global_compliance_report.json  global_health_metrics.json  pyproject.toml  quality_gates_cache.db  quality_gates_results_20250826_040403.json  requirements.txt  run_comprehensive_quality_gates.py  run_generation_2_validation.py  (+7 more)
.github/workflows/: ci-cd.yml
config/: production.yaml
deploy/: Dockerfile  docker-compose.yml
deploy/config/: production.yaml
deploy/production/: Dockerfile.enhanced  docker-compose.enhanced.yml  entrypoint.sh
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: production-deployment.yaml  quantum-hvac-deployment.yaml
deployment/production/: .env.example  docker-compose.production.yml  init.sql
docs/: README.md  RESEARCH_PAPER.md  ROADMAP.md  api_reference.md  autonomous_systems_guide.md  deployment_architecture.md  global_deployment_guide.md  security_reference.md
docs/adr/: 0000-adr-template.md  0001-quantum-annealing-architecture.md
examples/: README.md  basic_optimization.py  building_simulation.py  cli_demo.py  complete_system_demo.py  demo_simple.py  global_demo.py  microgrid_complete.py  microgrid_optimization.py  performance_benchmark.py  pipeline_guard_demo.py  production_demo.py  research_validation_demo.py  robust_demo.py  scalable_demo.py
quantum_ctl/: __init__.py  cli.py
quantum_ctl/api/: __init__.py  app.py  auth.py  models.py  tenant_middleware.py  websocket_endpoints.py  websocket_manager.py
quantum_ctl/autonomous/: __init__.py  adaptive_quantum_orchestrator.py  autonomous_quantum_breakthrough_engine.py  autonomous_research_engine.py  breakthrough_detector.py  self_optimizing_controller.py
quantum_ctl/breakthrough/: __init__.py  autonomous_optimization_engine.py
quantum_ctl/core/: __init__.py  control_loop.py  controller.py  microgrid.py  tenant_manager.py
quantum_ctl/dashboard/: __init__.py  analytics_dashboard.py  web_dashboard.py
quantum_ctl/database/: __init__.py  manager.py  models.py  storage.py
quantum_ctl/global_compliance/: __init__.py  compliance_manager.py  i18n_manager.py
quantum_ctl/integration/: __init__.py  bacnet_enhanced.py  bms_connector.py  (+5 more)
scripts/: entrypoint.sh
tests/: conftest.py  test_autonomous_breakthrough_system.py  test_basic_import.py  test_pipeline_guard.py  test_quality_gates.py  test_research_modules.py  test_scaling_modules.py  test_security_modules.py
(+123 files in other folders)
