[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-anneal-ctl"
version = "0.1.0"
description = "Quantum annealing controller for HVAC micro-grids using D-Wave systems"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Daniel Schmidt", email = "daniel@terragonlabs.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "dwave-ocean-sdk>=6.0.0",
    "dimod>=0.12.0",
    "dwave-system>=1.15.0",
    "dwave-hybrid>=0.6.0",
    "cvxpy>=1.3.0",
    "networkx>=2.6.0",
    "paho-mqtt>=1.6.0",
    "asyncio-mqtt>=0.11.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "redis>=4.0.0",
    "influxdb-client>=1.35.0",
    "prometheus-client>=0.15.0",
    "cryptography>=40.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]
simulation = [
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "plotly>=5.15.0",
]
bms = [
    "BAC0>=22.9.21",
    "pymodbus>=3.1.0",
]

[project.scripts]
quantum-ctl = "quantum_ctl.cli:main"

[project.urls]
Homepage = "https://github.com/danieleschmidt/photonic-mlir-synth-bridge"
Documentation = "https://quantum-anneal-ctl.readthedocs.io/"
Repository = "https://github.com/danieleschmidt/photonic-mlir-synth-bridge"
Issues = "https://github.com/danieleschmidt/photonic-mlir-synth-bridge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantum_ctl*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=quantum_ctl --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["quantum_ctl"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]